application/payara/not-works/node-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: payara-ports
spec:
  selector:
    app: payara
  ports:
    - name: payara-admin
      protocol: TCP
      port: 4848
      targetPort: 4848
  externalIPs:
    - 192.168.1.211
