application/payara/not-works/payara-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payara
spec:
  type: LoadBalancer
  ports:
    - port: 4848
      targetPort: 4848
      protocol: TCP
  selector:
    app: payara
